--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,6 @@ header a:hover {
     font-family: 'Times New Roman', Times, serif;
 }
 .cart {
-    /* justify-content: flex-end;
-    display: flex;
-    align-items: center;
-    padding-right: 10px; */
     float: right;
     text-align: center;
     padding-right: 10px;
@@ -49,7 +45,7 @@ header a:hover {
     padding: 30px 0;
 }
 #bandpic {
-    height: 100%;
+    height: auto;
     width: 100%;
 }
 .container2 {
@@ -61,17 +57,23 @@ header a:hover {
 .btngroup {
     font-size: 0px;
 }
-.button{
+.button {
     color: #fffdf6;
     border: none;
     padding: 5px;   
-    border-radius: 5px;
     box-shadow: 0px 0px 31px 1px rgba(0,0,0,0.3);
     width: 25%;
     cursor: pointer;
+    font-size: 16px;
+}
+.button:nth-child(1) {
+    border-top-left-radius: 5px;
+}
+.button:nth-child(4) {
+    border-top-right-radius: 5px;
 }
 .yellow {
-    background-color:#ffcc5c;
+    background-color:#ffcc5c;  
 }
 .yellow:hover {
     background-color: #FFE877;
