--- a/styles.css
+++ b/styles.css
@@ -85,24 +85,29 @@ header a:hover {
 
 
  /* This denotes the CSS for the popup for the item */
-.product-popup {
+ #hidePopup{
+    display: none;
+}
+ .product-popup {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 80%;
-    /* height: 80%;
-    overflow: auto; */
+    width: 40%;
+    height: 40%;
+    /* overflow: auto; */
     padding: 5%;
     margin: 0 auto;
     margin-top: 10%;
     background: #ebeae6;
     color: #000;
     z-index: 999999;
-    box-shadow: 0 0 0 5000000px rgba(0,0,0,0.3)
-}
-
-.popup-image, .popup-price, .popup-addToCart, .description {
+    box-shadow: 0 0 0 5000000px rgba(0,0,0,0.3);
+    position: fixed;
+    }
+.popup-price, .popup-addToCart, .description {
     margin: 2% auto;
+    height:20%;
+    width: 100%;
 }
 
 .popup-header {
@@ -110,7 +115,7 @@ header a:hover {
     justify-content: space-between;
     height: 5%;
     width: 100%;
-    font-size: 30px;
+    font-size: 10px;
     margin-bottom: 4%;
 }
 
@@ -122,6 +127,10 @@ header a:hover {
 .popup-image {
     margin: 0 auto;
     border: 3px solid black;
+    margin-top: 30%;
+    /* margin: 2% auto; */
+    height:20%;
+    width: 100%;
 }
 
 .popup-image img {
@@ -129,7 +138,7 @@ header a:hover {
 }
 
 .popup-price {
-    font-size: 30px;
+    font-size: 10px;
 }
 
 .product-popup p {
@@ -141,7 +150,7 @@ header a:hover {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    font-size: 24px;
+    font-size: 10px;
 }
 
 .adjust-quantity .material-icons {
@@ -156,12 +165,13 @@ header a:hover {
     color: #000;
     margin: 0 auto;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 6px;
     cursor: pointer;
+    margin-bottom: 5%;
 }
 
 .description {
-    font-size: 16px;
+    font-size: 10px;
 }
 /* //carousel */
 .slides {
