--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,26 @@ header a:hover {
     background-color: #8B3C3D;
 }
 
+/* This is the carousel css styling */
+.carousel-inner {
+    height: 250px;
+}
+.carousel-inner > .carousel-item > img {
+    width: 325px;
+    height: 250px;
+  }
+
+/* Carousel buy buttons */
+.carouselbuy {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    padding: 5%;
+    margin: 0 auto;
+    background: #ebeae6;
+    color: #000;
+}
 
  /* This denotes the CSS for the popup for the item */
 .product-popup {
@@ -165,69 +185,5 @@ header a:hover {
 .description {
     font-size: 16px;
 }
-/* //carousel */
-.slides {
-    height:250px;
-    position:relative;
-    width:325px;
-    margin:0 auto;
-}
-.slides1{
-    position:absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    opacity:0;
-    transition: all 0.5s ease-in-out;
-}
-.arrow{
-    position:absolute;
-    top:0;
-    display:block;
-    width:50px;
-    height:100%;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    background: url("http://dancort.es/assets/img/css-carousel/carousel-arrow-dark.png") 50% 50% / 20px no-repeat;
-}
-.arrow-prev{
-    left:0;
-}
-.arrow-next{
-    right:0;
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-}
-.light{
-    color:white;
-}
-  /*Select every element*/
-[id^="item"] {
-      display: none;
-    }
-.item-1 {
-    z-index: 2;
-    opacity: 1;
-    background:url("pictures/album-art.jpg");
-    background-size:cover;
-}
-.item-2{
-    background:url('pictures/black-shirt.jpg');
-    background-size:cover;
-}
-.item-3{
-    background:url('pictures/burgundy-shirt.jpg');
-    background-size:cover;
-}
-*:target ~ .item-1 {
-    opacity: 0;
-}
-#item-1:target ~ .item-1 {
-    opacity: 1;
-}
-#item-2:target ~ .item-2, #item-3:target ~ .item-3 {
-    z-index: 3;
-    opacity: 1;
-}
-  
+
   
