--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ header a:hover, .cart:hover {
     color: #6f2327;
     cursor: pointer;
 }
-.popup-addToCart {
+.popup-addToCart, .carousel-addToCart {
     width: 90%;
     height: 9%;
     background: #ffcc5c;
@@ -189,15 +189,7 @@ header a:hover, .cart:hover {
     border-bottom-right-radius: 5px;
 }
 /* SLIDE OUT CART*/
-.slideOutCartParent {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    position: absolute;
-    z-index: 9999999999999;
-    top: 0;
-}
+
 #hideCart {
 display: none;
 }
@@ -212,6 +204,9 @@ display: none;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     margin: 0;
+    position: absolute;
+    z-index: 9999999999999;
+    top: 0;
 }
 .cart-header {
     display: flex;
@@ -251,6 +246,33 @@ display: none;
     background: #ffcc5c;
 }
 
+/* For Desktop */
+
+@media only screen and (min-width: 1200px) {
+    .product-popup-burgundy, .product-popup-black, .product-popup-white, .product-popup-cd, .product-popup-vinyl, .product-popup-p1, .product-popup-p2, .product-popup-p3, .product-popup-hat, .product-popup-cymbal, .product-popup-tix1, .product-popup-tix2 {
+        width: 50%;
+        left: 25%;
+    }
+    .popup-price, .popup-addToCart, .description {
+        font-size: 20px;
+    }
+    .popup-header {
+        font-size: 20px;
+    }
+    .popup-price {
+        font-size: 36px;
+    }
+    .adjust-quantity {
+        font-size: 36px;
+    }
+    .popup-addToCart {
+        font-size: 24px;
+        padding: 20px;
+    }
+    .description {
+        font-size: 24px;
+    }    
+}
 
  
   
