--- a/styles.css
+++ b/styles.css
@@ -265,6 +265,12 @@ font-size: 20px;
 /* flex-direction: column; */
 }
 
+.slideOutCart a {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+}
+
 /*CHECKOUT PAGE*/
 
 .columns {
