--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@
 body {
     background-color: #000;
 }
+#mainpagehide {
+}
 .hideAdded{
     display: none;
 }
@@ -288,6 +290,10 @@ font-size: 20px;
 
 /*CHECKOUT PAGE*/
 
+.hidecheckout {
+    display: none;
+  }
+
 .columns {
     margin: 1% auto;
 }
@@ -305,6 +311,8 @@ font-size: 20px;
     justify-content: center;
     width: 100%;
     text-align: center;
+    position: absolute;
+
 }
 .checkout-page a {
     text-decoration: none;
