--- a/styles.css
+++ b/styles.css
@@ -294,8 +294,12 @@ font-size: 20px;
     display: none;
   }
 
-.columns {
+.columnscheckout {
     margin: 1% auto;
+    display:flex;
+    justify-content: space-between;
+    width: 80%;
+    margin: 1.5% auto;
 }
 
 .checkout-button {
