items added to checkout from cart and hide and display cash and credit form

--- a/styles.css
+++ b/styles.css
@@ -300,8 +300,20 @@ font-size: 20px;
     margin: 1% auto;
     display:flex;
     justify-content: space-between;
-    width: 80%;
-    margin: 1.5% auto;
+    width: 100%;
+    margin: 1.5% auto; 
+    flex-direction: column;
+
+}
+
+.itemnamecheckout {
+    display: flex;
+    /* flex-direction: column; */
+}
+.itempricecheckout {
+    display: flex;
+    /* flex-direction: column; */
+
 }
 
 .checkout-button {
@@ -362,12 +374,22 @@ font-size: 20px;
     margin: 1.5% auto;
 }
 
-.subtotal, .tax, .total {
+.cash-form {
+    display: none;
+}
+.credit-form {
+    display: none;
+}
+.subtotalcontainer, .tax, .totalcontainer {
     display: flex;
     width: 80%;
     margin: 1.5% auto;
     justify-content: space-between;
 }
+
+.total {
+    justify-content: flex-end;
+}    
 
 .amount-due, .change-due {
     display: flex;
