--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,11 @@
 body {
     background-color: #000;
 }
-#mainpagehide {
-}
-.hideAdded{
+/* Added to Cart Popup and Receipt Styling */
+.hideAdded, .hideReceipt{
     display: none;
 }
-.added{
+.added, .receipt {
     display: flex;
     position: absolute;
     justify-content: center;
@@ -21,10 +20,25 @@ body {
     margin-left: 25%;
     z-index: 99999999;
 }
+.receiptFooter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+    .receiptFooterItem {
+    margin: 10px;
+    padding: 5px;
+    width: 45%;
+}
+.receiptHeader, .receiptSummary{
+    text-align: center;
+    margin: 5px;
+}
 .addedP {
     display: flex;
     text-align: center;
 }
+/* End Added to Cart Popup and Receipt Styling */
 header {
     display: flex;
     background-color: #6f2327;
@@ -281,7 +295,9 @@ display: none;
 display: flex;
 justify-content: space-around;
 font-size: 20px;
-/* flex-direction: column; */
+border-bottom: 1px solid black;
+padding: 5px;
+align-items: center;
 }
 
 .slideOutCart a {
@@ -380,7 +396,7 @@ font-size: 20px;
 .credit-form {
     display: none;
 }
-.subtotalcontainer, .tax, .totalcontainer {
+.subtotalcontainer, .taxcontainer, .totalcontainer {
     display: flex;
     width: 80%;
     margin: 1.5% auto;
